--- a/TP0/TP0.ipynb
+++ b/TP0/TP0.ipynb
@@ -58,6 +58,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style = \"background:#6B8E23\">\n",
+    "    <span style = \"color:#FFFFFF\"> Cross-validation, sometimes called rotation estimation or out-of-sample testing, is any of various similar model validation techniques for assessing how the results of a statistical analysis will generalize to an independent data set. It is mainly used in settings where the goal is prediction, and one wants to estimate how accurately a predictive model will perform in practice. In a prediction problem, a model is usually given a dataset of known data on which training is run (training dataset), and a dataset of unknown data (or first seen data) against which the model is tested (called the validation dataset or testing set). The goal of cross-validation is to test the model's ability to predict new data that was not used in estimating it, in order to flag problems like overfitting or selection bias and to give an insight on how the model will generalize to an independent dataset (i.e., an unknown dataset, for instance from a real problem). \n",
+    "        </span>\n",
+    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Question 1: \"Code\" cells\n",
     "\n",
     "Execute the cell below after replacing the answer by 1."
@@ -65,13 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<div style=\"background:#FF0000\">BOOOOH<br>:-(</div>"
+       "<div style=\"background:#00FF00\">CORRECT<br>:-)</div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -101,7 +120,7 @@
     "\n",
     "### Now your question:\n",
     "question = 1\n",
-    "answer = 0  # Replace by 1\n",
+    "answer = 1  # Replace by 1\n",
     "score = 0\n",
     "score += check(answer, question)"
    ]
@@ -121,17 +140,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "data/iris_feat.name      data/iris_test.data      data/iris_valid.data\r\n",
-      "data/iris_label.name     data/iris_test.solution  data/iris_valid.solution\r\n",
-      "data/iris_private.info   data/iris_train.data\r\n",
-      "data/iris_public.info    data/iris_train.solution\r\n"
+      "data/iris_feat.name\tdata/iris_test.data\t  data/iris_valid.data\r\n",
+      "data/iris_label.name\tdata/iris_test.solution   data/iris_valid.solution\r\n",
+      "data/iris_private.info\tdata/iris_train.data\r\n",
+      "data/iris_public.info\tdata/iris_train.solution\r\n"
      ]
     }
    ],
@@ -144,13 +163,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div style=\"background:#FF0000\">BOOOOH<br>:-(</div>"
+       "<div style=\"background:#00FF00\">CORRECT<br>:-)</div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -161,10 +180,10 @@
     }
    ],
    "source": [
-    "feature_number = 3            # put correct value\n",
-    "training_sample_number = 21   # put correct value\n",
-    "validation_sample_number = 50 # put correct value\n",
-    "test_sample_number = 18       # put correct value\n",
+    "feature_number = 4            # put correct value\n",
+    "training_sample_number = 35   # put correct value\n",
+    "validation_sample_number = 35 # put correct value\n",
+    "test_sample_number = 35       # put correct value\n",
     "question = 2\n",
     "answer = feature_number*(training_sample_number+validation_sample_number+test_sample_number)\n",
     "score += check(answer, question)"
@@ -186,25 +205,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import_numpy_as = \"hello\"\n",
-    "import_pandas_as = \"world\"\n",
-    "name_of_first_argument_of_read_as_df = \"zarbi\"\n",
-    "default_value_of_second_argument_of_read_as_df=\"test\""
+    "import_numpy_as = \"np\"\n",
+    "import_pandas_as = \"pd\"\n",
+    "name_of_first_argument_of_read_as_df = \"basename\"\n",
+    "default_value_of_second_argument_of_read_as_df=\"train\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div style=\"background:#FF0000\">BOOOOH<br>:-(</div>"
+       "<div style=\"background:#00FF00\">CORRECT<br>:-)</div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -234,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -276,64 +295,82 @@
        "      <th>sepal_width</th>\n",
        "      <th>petal_length</th>\n",
        "      <th>petal_width</th>\n",
-       "      <th>target</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4.4</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.3</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
+       "      <th>count</th>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>35.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4.7</td>\n",
-       "      <td>3.2</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.625714</td>\n",
+       "      <td>3.005714</td>\n",
+       "      <td>3.402857</td>\n",
+       "      <td>1.054286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6.1</td>\n",
-       "      <td>2.6</td>\n",
-       "      <td>5.6</td>\n",
-       "      <td>1.4</td>\n",
-       "      <td>virginica</td>\n",
+       "      <th>std</th>\n",
+       "      <td>0.892565</td>\n",
+       "      <td>0.421442</td>\n",
+       "      <td>1.962514</td>\n",
+       "      <td>0.839588</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6.4</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>virginica</td>\n",
+       "      <th>min</th>\n",
+       "      <td>4.300000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.100000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>setosa</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>4.900000</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>1.450000</td>\n",
+       "      <td>0.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.500000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>3.700000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.300000</td>\n",
+       "      <td>3.250000</td>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>1.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.700000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>6.700000</td>\n",
+       "      <td>2.500000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   sepal_length  sepal_width  petal_length  petal_width     target\n",
-       "0           4.4          3.0           1.3          0.2     setosa\n",
-       "1           4.7          3.2           1.6          0.2     setosa\n",
-       "2           6.1          2.6           5.6          1.4  virginica\n",
-       "3           6.4          3.1           5.5          1.8  virginica\n",
-       "4           5.8          4.0           1.2          0.2     setosa"
+       "       sepal_length  sepal_width  petal_length  petal_width\n",
+       "count     35.000000    35.000000     35.000000    35.000000\n",
+       "mean       5.625714     3.005714      3.402857     1.054286\n",
+       "std        0.892565     0.421442      1.962514     0.839588\n",
+       "min        4.300000     2.000000      1.000000     0.100000\n",
+       "25%        4.900000     2.800000      1.450000     0.200000\n",
+       "50%        5.500000     3.000000      3.700000     1.000000\n",
+       "75%        6.300000     3.250000      5.100000     1.800000\n",
+       "max        7.700000     4.000000      6.700000     2.500000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +379,7 @@
     "from data_io import read_as_df\n",
     "# With \"read_as_df\" the data are loaded as a Pandas Data Frame\n",
     "data = read_as_df(data_dir  + '/' + data_name)  \n",
-    "data.head()"
+    "data.describe()"
    ]
   },
   {
@@ -354,13 +391,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div style=\"background:#FF0000\">BOOOOH<br>:-(</div>"
+       "<div style=\"background:#00FF00\">CORRECT<br>:-)</div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -371,10 +408,10 @@
     }
    ],
    "source": [
-    "std_sepal_length = 0.1323  # Standard deviation of the sepal length, put correct value\n",
-    "mean_sepal_width = 3.4454   # Mean of the sepal width, put correct value\n",
-    "min_petal_length = 8.5  # Minimum value of the petal length, put correct value\n",
-    "max_petal_width = 12    # Maximum value of the petal width, put correct value\n",
+    "std_sepal_length = 0.892565 # Standard deviation of the sepal length, put correct value\n",
+    "mean_sepal_width = 3.005714   # Mean of the sepal width, put correct value\n",
+    "min_petal_length = 1.0  # Minimum value of the petal length, put correct value\n",
+    "max_petal_width = 2.5    # Maximum value of the petal width, put correct value\n",
     "\n",
     "question = 4\n",
     "reponse = std_sepal_length+mean_sepal_width+min_petal_length+max_petal_width\n",
@@ -397,25 +434,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "A = [] # Numpy array with the values of \"data\"\n",
-    "B = [] # A without the last column\n",
-    "C = [] # B raised to the power 2"
+    "A = data.to_numpy() # Numpy array with the values of \"data\"\n",
+    "B = np.delete(A,4,1) # A without the last column\n",
+    "C = np.square(B) # B raised to the power 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div style=\"background:#FF0000\">BOOOOH<br>:-(</div>"
+       "<div style=\"background:#00FF00\">CORRECT<br>:-)</div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -917,7 +954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
